# KrotRay

./: .env.example  .gitignore  CHECK_XRAY_AND_BOT.md  DEPLOY_STEPS.md  DEPLOY_VDS.md  DEVICE_LIMIT_EXPLANATION.md  DEVICE_LIMIT_SETUP.md  PROMPTS_QUEUE.md  VERCEL.md  alembic.ini  index.py  main.py  pyproject.toml  requirements.txt  servers.catalog.example.json
alembic/: env.py
api/: auth.py  cloaking_api.py  cp_api.py  cp_subscription_sync.py  edge_lb_api.py  expired_job.py  key_factory_api.py  main.py  minimal_subscription.py  payments.py  routes.py  server.py  xray_config_builder.py  xray_grpc.py
bot/: config.py  handlers.py  keyboards.py
db/: __init__.py  session.py
docs/: ADD_NEW_SERVER.md  DEVICE_LIMIT_TESTING.md  SETUP_FLUTTER_AND_CP_SERVERS.md  XRAY_CLIENT_NOT_FOUND_FIX.md  XRAY_STATS_BY_EMAIL_FIX.md  future-krot-key-format.txt  xray_config_example_correct.json  xray_config_policy_fix.md  xray_config_with_api.json  xray_vars.example.json
mini_app/: README.md  app.js  index.html  style.css
scripts/: VPN_BALANCE_TESTS.md  add_cp_server.py  add_first_server.py  add_server.py  add_user_subscription.py  check_connections.py  check_payment.py  delete_subscription.py  delete_user_subscription.py  edge_diagnostics.sql  edge_lb_distribution_1000.py  extend_subscription.py  gen_xray_config.py  generate_xray_proto.sh  import_servers_catalog_json.py  init_redis_servers.py  list_xray_users.py  regenerate_keys.py  remove_user_completely.py  reset_all_keys_one_device.py  restore_user_subscription.py  run_vpn_balance_tests.py  sample_key_factory_servers.json  (+12 more)
(+73 files in other folders)
